--- a/html/index.html
+++ b/html/index.html
@@ -108,45 +108,57 @@
       <div class="row py-3">
         <div class="col-md-6">
           <div class="px-lg-3">
-            <h4 class="wow fadeInUp">Coding skills</h4>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">PHP</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100">95%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Java</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 92%;" aria-valuenow="75" aria-valuemin="0"
                   aria-valuemax="100">92%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Java</span>
+              <span class="caption">React Native</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0"
-                  aria-valuemax="100">60%</div>
+                <div class="progress-bar" role="progressbar" style="width: 59%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100">59%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Javascript</span>
+              <span class="caption">Spring Boot</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="75" aria-valuemin="0"
-                  aria-valuemax="100">79%</div>
+                <div class="progress-bar" role="progressbar" style="width: 88%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100">88%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Laravel</span>
+              <span class="caption">Android</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0"
-                  aria-valuemax="100">70%</div>
+                <div class="progress-bar" role="progressbar" style="width: 64%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100">64%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">MySQL</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 89%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100">89%</div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="px-lg-3">
-            <h4 class="wow fadeInUp">Design Skills</h4>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">UI / UX / Graphic Design</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 92%;" aria-valuenow="75" aria-valuemin="0"
-                  aria-valuemax="100">92%</div>
+                <div class="progress-bar" role="progressbar" style="width: 89%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100">89%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
@@ -157,7 +169,7 @@
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">HTML/CSS</span>
+              <span class="caption">HTML/CSS/JS</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0"
                   aria-valuemax="100">90%</div>
@@ -170,6 +182,20 @@
                   aria-valuemax="100">90%</div>
               </div>
             </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Hibernate</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100">80%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Firebase</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100">70%</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -180,34 +206,31 @@
           <h2 class="fw-normal">Education</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2021-Current</div>
+              <div class="title">2021 - Current</div>
               <div class="details">
-                <!-- <h5>Specialize of course</h5> -->
                 <small class="fg-theme">Java Institute for Advanced Technology - Colombo, Sri Lanka</small>
-                <p>> Following BEng. (Hons) Software Engineering Degree</p>
+                <p>Following BSc. (Hons) Software Engineering Degree offered by Birmingham City
+                  University in UK</p>
               </div>
             </li>
             <li>
-              <div class="title">2022</div>
+              <div class="title">2020 - 2021</div>
               <div class="details">
-                <!-- <h5>Specialize of course</h5> -->
                 <small class="fg-theme">Sabaragamuwa University of Sri Lanka</small>
                 <p>Completed Diploma in English</p>
               </div>
             </li>
             <li>
-              <div class="title">2022</div>
+              <div class="title">2020 - 2021</div>
               <div class="details">
-                <!-- <h5>Specialize of course</h5> -->
                 <small class="fg-theme">IPCS - Ratnapura, Sri Lanka</small>
                 <p>Completed Computer Graphic Designing NVQ Level 4</p>
               </div>
             </li>
             <li>
-              <div class="title">2019</div>
+              <div class="title">2019 - 2020</div>
               <div class="details">
-                <!-- <h5>Specialize of course</h5> -->
-                <small class="fg-theme">St.Aloysius Collage - Ratnapura, Sri Lanka</small>
+                <small class="fg-theme">St.Aloysius College - Ratnapura, Sri Lanka</small>
                 <p>Passed G.C.E A/L with one B pass and two C passes in Technology Stream</p>
               </div>
             </li>
@@ -217,9 +240,17 @@
           <h2 class="fw-normal">Experience</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2022 - Current</div>
+              <div class="title">2023 - Current</div>
               <div class="details">
-                <p>Web Developer & Graphic Designer</p>
+                <small class="fg-theme">Exon Software Solutions - Colombo</small>
+                <p>Intern Associate Software Engineer [ Java / SpringBoot / PHP ]</p>
+              </div>
+            </li>
+            <li>
+              <div class="title">2023 - Current</div>
+              <div class="details">
+                <small class="fg-theme">Silicon Radon Networks - Colombo</small>
+                <p>WordPress Web Developer [ PHP ]</p>
               </div>
             </li>
           </ul>
@@ -271,7 +302,7 @@
               <span class="ti-desktop"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">Web Development</h4>
+              <h4 class="fg-theme">App Development</h4>
             </div>
           </div>
         </div>
